# identicore

./: .gitignore  README.md  pyproject.toml
cmd/: compute_detection_accuracy.py
identicore/: __init__.py  exceptions.py  identicore.py  types.py
stubs/identicore/: __init__.pyi  exceptions.pyi  identicore.pyi  types.pyi
tests/: test_comparison.py  test_detection.py  test_drawing.py
